--- a/freeboxing.html
+++ b/freeboxing.html
@@ -42,7 +42,7 @@
                     <li><a href="basketball.html" class="hover-underline-animation">បាល់បោះ</a></li>
                     <li><a href="freeboxing.html"   class="active" class="hover-underline-animation">ប្រដាល់សេរី</a></li>
                     <li><a href="lbokator.html" class="hover-underline-animation">ល្បុក្កតោ</a></li>
-                    <li><a href="Skiing.html" class="hover-underline-animation">ជុិះស្គី</a></li>
+                    <li><a href="Skiing.html" class="hover-underline-animation">ជិះស្គី</a></li>
                     <li><a href="boatracing.html" class="hover-underline-animation">ប្រណាំងទូក</a></li>
                     <li><a href="taekwondo.html" class="hover-underline-animation">តៃខ្វាន់ដូ</a></li>
                     <li><a href="electronicsports.html" class="hover-underline-animation">កីឡាអេឡិចត្រូនិក</a></li>
