--- a/football.html
+++ b/football.html
@@ -40,7 +40,7 @@
                     <li><a href="football.html" class="active" class="hover-underline-animation">បាល់ទាត់</a></li>
                     <li><a href="volleyball.html" class="hover-underline-animation">បាល់ទះ</a></li>
                     <li><a href="basketball.html" class="hover-underline-animation">បាល់បោះ</a></li>
-                    <li><a href="freeboxing.html" class="hover-underline-animation">ប្រដាល់សេរី</a></li>
+                    <li><a href="freeboxing.html" class="hover-underline-animation">ប្រដាល់</a></li>
                     <li><a href="lbokator.html" class="hover-underline-animation">ល្បុក្កតោ</a></li>
                     <li><a href="Skiing.html" class="hover-underline-animation">ជិះស្គី</a></li>
                     <li><a href="boatracing.html" class="hover-underline-animation">ប្រណាំងទូក</a></li>
@@ -1045,7 +1045,7 @@
                     <li>បាល់ទាត់</li>
                     <li>បាល់ទះ</li>
                     <li>បាល់បោះ</li>
-                    <li>ប្រដាល់សេរី</li>
+                    <li>ប្រដាល់</li>
                     <li>ល្បុក្កតោ</li>
                     <li>ជិះស្គី</li>
                     <li>ប្រណាំងទូក</li>
