--- a/main.html
+++ b/main.html
@@ -54,13 +54,13 @@
 
     <section class="sectionP2">
 
-        <div class="top2">
+        <!-- <div class="top2">
             <p><a href="#" class="active">កំពុងពេញនិយម</a></p>
             <h1>ព័ត៌មានប្រដាល់</h1>
             <p><a href="#">ចុងក្រោយបំផុត</a></p>
-        </div>
+        </div> -->
 
-        <hr noshade="noshade" color="black" size="1" align="center" style="margin-top: 50px;">
+        <!-- <hr noshade="noshade" color="black" size="1" align="center" style="margin-top: 50px;"> -->
 
         <div class="show">
             <img src="https://www.postkhmer.com/sites/default/files/styles/image_780x440/public/field/image/topic_13._krud_kun_khmer_boxing_match_at_chroy_changvar_on_sep_04_2023._by_tvk_9.jpg?itok=6W-iIUYO"
@@ -86,72 +86,6 @@
             </div>
         </div>
     </section>
-
-    <section id="s3" class="sectionP1">
-        <div class="s3container">
-            <div class="s3left">
-                <img src="https://www.postkhmer.com/sites/default/files/styles/image_780x440/public/field/image/krud002.jpg?itok=RrpA6Zru"
-                    alt="">
-                <h1>សង្វៀន​ ទទក នឹងរៀប​ចំ​ការ​ប្រកួត​ដណ្តើម​ខ្សែ​ក្រវាត់​ ៦ ​គ្រឿង ដើម្បី​​បំបែក​កំណត់​​ត្រា​ពិភព​លោក
-                </h1>
-                <p>ថ្ងៃទី ២៩ ខែសីហា ឆ្នាំ ២០២៣ | ៩:៤៣ ​នាទី</p>
-                <p>ភ្នំពេញៈសង្វៀន​ប្រដាល់​របស់​ទូរទស្សន៍ជាតិកម្ពុជា (ទទក) និង​ដៃ​គូសហការ
-                    បានរួមគ្នា​បង្កើត​​​ឱ្យ​​មាន​​ការ​ប្រកួត​ដណ្តើម​ខ្សែ​ក្រវាត់​រហូត​ដល់​ ៦ ​គ្រឿង ក្នុង​ពេល​តែមួយ
-                    ហើយ​​លោក ម៉ុល នី បាន​អះអាង​​ថា ការ​ប្រកួត Krud Kun Khmer ដែល​ប្រជុំ​ទៅ​ដោយ​កីឡាករ​ជើង​ខ្លាំងមកពី​ ៦
-                    ​ប្រទេស​នេះ ជាព្រឹត្តិការណ៍​ដ៏ធំមិន​ធ្លាប់​មាន
-                    ដែល​នឹង​​បំបែក​កំណត់​ត្រារាល់​ការ​ប្រកួត​នៅលើ​ពិភព​លោក។<span>...</span> <span id="readmore"><a href="#">អានបន្ថែម</a></span></p></p>
-            </div>
-            <div class="s3container2">
-                <div class="s3news3">
-                    <div>
-                        <img src="https://phnompenhpost.com/sites/default/files/styles/image_780x440/public/field/image/topic_16_thoeun_theara_knocks_down_thai_in_first_round_at_town_ring.jpg?itok=t_cYJf8D"
-                            alt="">
-                    </div>
-                    <div>
-                        <h1>អ្នក​ប្រដាល់ ធឿន ធារ៉ា វាយ​ឲ្យ​សន្លប់​យ៉ាង​អស្ចារ្យ</h1>
-                        <p>ថ្ងៃទី ២៨ ខែសីហា ឆ្នាំ ២០២៣ | ៥:៥២ ​នាទី</p>
-                        <p>ជ័យ​ជម្នះ​ដ៏​ខ្លាំង​ក្លា​សម្រាប់​អ្នក​ប្រដាល់​កម្ពុជា ធឿន ធារ៉ា
-                            ដែល​ទើប​ជា​សះស្បើយ​ពី​របួស​ដៃ​នោះ
-                            លើ​គូ​ប្រកួត​របស់​គេ​គឺ​កីឡាករ​ថៃ Pich Kvannaek ជា​ការ​ធ្វើ​តេស្ត​ដ៏​សំខាន់
-                            ខណៈ​រូប​គេ​ត្រៀម​ខ្លួន​សម្រាប់​ការ​ប្រកួត​ពិភពលោក​ចំនួន ៥ នៅ​ចុង​ឆ្នាំ​នេះ។<span>...</span> <span id="readmore"><a href="#">អានបន្ថែម</a></span></p></p>
-                    </div>
-                </div>
-                <div class="s3news3">
-                    <div>
-                        <img src="https://www.postkhmer.com/sites/default/files/styles/image_780x440/public/field/image/kunn.jpg?itok=A5fF-UyQ"
-                            alt="">
-                    </div>
-                    <div>
-                        <h1>ព្រឹត្តិការណ៍​អ្នកលេង​គុន ត្រូវបាន​រៀបចំ​ឱ្យមាន​ជា​លើកដំបូង
-                            ដើម្បី​លើកកម្ពស់​កីឡា​គុន​ល្បុក្កតោ​</h1>
-                        <p>ថ្ងៃទី​ ២៧ ខែសីហា ឆ្នាំ ២០២៣ | ៩:៥៩ ​នាទី</p>
-                        <p>ភ្នំពេញៈព្រឹត្តិ​ការណ៍​ប្រកួត​អ្នកលេ​ង​គុន «Neak Leng Kun»
-                            ត្រូ​វបាន​រៀបចំ​ឱ្យមាន​ជា​លើក​ដំបូ​ងនៅ​កម្ពុជា នៅ​ថ្ងៃ​សៅរ៍ និង​ថ្ងៃអាទិត្យ ​ចុង​សប្តាហ៍​នេះ
-                            ​ដើម្បី​រួម​ចំណែក​លើក​កម្ពស់​ដល់​​ <span>...</span> <span id="readmore"><a href="#">អានបន្ថែម</a></span></p>
-                        </p>
-                    </div>
-                </div>
-                <div class="s3news3">
-                    <div>
-                        <img src="https://www.postkhmer.com/sites/default/files/styles/image_780x440/public/field/image/boxing_16.jpg?itok=4Y2MIElI"
-                            alt="">
-                    </div>
-                    <div>
-                        <h1>ការប្រកួត​ដាក់​ខ្សែក្រវាត់​រវាង​ជើង​ខ្លាំង ឃីម បូរ៉ា និង ពេជ្រ សម្បត្តិ
-                            កំពុង​ក្លាយជា​ប្រធានបទ​ក្តៅ</h1>
-                        <p>ថ្ងៃទី ២៧ ខែសីហា ឆ្នាំ ២០២៣ | ៩:៥៧ ​នាទី</p>
-                        <p>ការ​រៀបចំ​ឱ្យមាន​ការ​ប្រកួត​ដាក់​ខ្សែ​ក្រវាត់​គ្រុឌ​រវាង​ជើង​ខ្លាំង​ចាស់​វស្សា​ ឃីម បូរ៉ា
-                            និង​អ្នក​ប្រដាល់​កំពុង​ល្បី​ឈ្មោះ​ មាន​រហស្ស​នាម «​ក្របី​ព្រៃ​» ពេជ្រ ​សម្បត្តិ
-                            បាន​និង​កំពុង​ក្លាយ​ជា​ប្រធាន​បទ​ក្តៅ និង​ទាក់​ទាញ​ខ្លាំង​ចំពោះ​អ្នក​គាំទ្រ
-                        
-                            <span>...</span> <span id="readmore"><a href="#">អានបន្ថែម</a></span></p>
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
 
     <main>
         <section id="s4" class="sectionP1">
