--- a/freeboxing.html
+++ b/freeboxing.html
@@ -55,7 +55,7 @@
     <section class="sectionP2">
 
         <div class="top2">
-            <p><a href="#" class="active">កំពុងពេញនិយម</a></p>
+            <p><a href="index.html">កំពុងពេញនិយម</a></p>
             <h1>ព័ត៌មានប្រដាល់</h1>
             <p><a href="#">ចុងក្រោយបំផុត</a></p>
         </div>
