--- a/volleyball.html
+++ b/volleyball.html
@@ -43,7 +43,7 @@
                     <li><a href="basketball.html" class="hover-underline-animation">បាល់បោះ</a></li>
                     <li><a href="freeboxing.html" class="hover-underline-animation">ប្រដាល់</a></li>
                     <li><a href="lbokator.html" class="hover-underline-animation">ល្បុក្កតោ</a></li>
-                    <li><a href="Skiing.html" class="hover-underline-animation">ជិះស្គី</a></li>
+                    <li><a href="Swimming.html" class="hover-underline-animation">ហែលទឹក</a></li>
                     <li><a href="boatracing.html" class="hover-underline-animation">ប្រណាំងទូក</a></li>
                     <li><a href="taekwondo.html" class="hover-underline-animation">តៃខ្វាន់ដូ</a></li>
                     <li><a href="electronicsports.html" class="hover-underline-animation">កីឡាអេឡិចត្រូនិក</a></li>
@@ -228,14 +228,16 @@
                 </div>
                 <div class="s3news3">
                     <div>
-                        <img src="https://cdn.sabay.com/cdn/media.sabay.com/media/sabay-news/Sport-News/Local-Sports/Volleyball-League-1/Slamball(2)/Slamball-1/63d0b6551d564_1674622500_large.jpg"
+                        <img src="https://www.postkhmer.com/sites/default/files/styles/image_780x440/public/field/image/nn1_86.jpg?itok=gYNwoqyB"
                             alt="">
                     </div>
                     <div>
-                        <h1>បាល់ទះ​ត្រៀម​ខ្លួន​សម្រាប់​ការ​ពង្រីក​អន្តរជាតិ</h1>
+                        <h1>ក្រុមបាល់ទះអង្គុយកម្ពុជា រំពឹងយក​ឈ្នះ​ឥណ្ឌូនេស៊ីម្តងទៀត
+                            ដើម្បី​ឡើង​ទៅជួប​ថៃនៅ​វគ្គ​ផ្តាច់​ព្រ័ត្រ</h1>
                         <p>ថ្ងៃទី​ ២៧ ខែសីហា ឆ្នាំ ២០២៣ | ៩:៥៩ ​នាទី</p>
-                        <p>ឧបនាយករដ្ឋមន្ត្រី និងជារដ្ឋមន្ត្រីក្រសួងមហាផ្ទៃ លោក ស សុខា
-                            បានបញ្ជាក់ពីការយកចិត្តទុកដាក់របស់ខ្លួនក្នុងការលើកកម្ពស់ការរីកចម្រើននៃវិស័យកីឡាបាល់ទះ
+                        <p>ភ្នំពេញ៖ ក្រុមកីឡាករបាល់ទះអង្គុយ​កម្ពុជា បាន​ដាក់ក្តីសង្ឃឹម​ថា ពួកគេ
+                            នឹង​អាច​យក​ឈ្នះលើ​ក្រុម​ឥណ្ឌូនេស៊ី ជាថ្មី​ម្តងទៀត
+                            ដើម្បី​ឈាន​ទៅកាន់ការ​ប្រកួត​ដណ្តើម​យកមេដាយមាស
                             <span>...</span> <span id="readmore">អានបន្ថែម</span>
                         </p>
                     </div>
@@ -244,14 +246,15 @@
             <div class="s3container2">
                 <div class="s3news3">
                     <div>
-                        <img src="https://cdn.sabay.com/cdn/media.sabay.com/media/sabay-news/Sport-News/Local-Sports/Volleyball-League-1/Slamball(2)/Slamball-1/63d0b6551d564_1674622500_large.jpg"
+                        <img src="https://www.postkhmer.com/sites/default/files/styles/image_780x440/public/field/image/photo_2023-05-19_10-03-25.jpg?itok=w_I0tLEf"
                             alt="">
                     </div>
                     <div>
                         <h1>បាល់ទះ​ត្រៀម​ខ្លួន​សម្រាប់​ការ​ពង្រីក​អន្តរជាតិ</h1>
                         <p>ថ្ងៃទី​ ២៧ ខែសីហា ឆ្នាំ ២០២៣ | ៩:៥៩ ​នាទី</p>
-                        <p>ឧបនាយករដ្ឋមន្ត្រី និងជារដ្ឋមន្ត្រីក្រសួងមហាផ្ទៃ លោក ស សុខា
-                            បានបញ្ជាក់ពីការយកចិត្តទុកដាក់របស់ខ្លួនក្នុងការលើកកម្ពស់ការរីកចម្រើននៃវិស័យកីឡាបាល់<span>...</span>
+                        <p>ភ្នំពេញៈ ក្នុងនាម​ប្រធាន​សហព័ន្ធ​កីឡាបាល់ទះ​កម្ពុជា លោក នេត សាវឿន អគ្គស្នងការ​នគរបាល​ជាតិ
+                            បាន​ណែនាំ​ឱ្យ​ក្រុម​កីឡាករ កីឡាការិនី​បាល់ទះ​ទាំងអស់
+                            ត្រូវ​បន្ដ​ខិតខំ​ប្រឹងប្រែង​អភិវឌ្ឍន៍​សមត្ថភាព​របស់​ខ្លួន<span>...</span>
                             <span id="readmore">អានបន្ថែម</span>
                         </p>
                     </div>
@@ -262,7 +265,7 @@
                             alt="">
                     </div>
                     <div>
-                        <h1>បាល់ទះ​ត្រៀម​ខ្លួន​សម្រាប់​ការ​ពង្រីក​អន្តរជាតិ</h1>
+                        <h1>លោក នេ​ត សាវឿន ណែនាំ​ឱ្យ​ក្រុម​កីឡាករ កីឡាការិនី​បាល់ទះ ត្រូវ​បន្ដ​ខិតខំ​ប្រឹងប្រែង​អភិវឌ្ឍន៍​សមត្ថភាព​របស់​ខ្លួន ឱ្យ​កាន់តែ​រីកចម្រើន​បន្ថែមទៀត</h1>
                         <p>ថ្ងៃទី​ ២៧ ខែសីហា ឆ្នាំ ២០២៣ | ៩:៥៩ ​នាទី</p>
                         <p>ឧបនាយករដ្ឋមន្ត្រី និងជារដ្ឋមន្ត្រីក្រសួងមហាផ្ទៃ លោក ស សុខា
                             បានបញ្ជាក់ពីការយកចិត្តទុកដាក់របស់ខ្លួនក្នុងការលើកកម្ពស់ការរីកចម្រើននៃវិស័យកីឡា<span>...</span>
