--- a/electronicsports.html
+++ b/electronicsports.html
@@ -43,7 +43,7 @@
                     <li><a href="basketball.html" class="hover-underline-animation">បាល់បោះ</a></li>
                     <li><a href="freeboxing.html" class="hover-underline-animation">ប្រដាល់</a></li>
                     <li><a href="lbokator.html"  class="hover-underline-animation">ល្បុក្កតោ</a></li>
-                    <li><a href="Skiing.html" class="hover-underline-animation">ជិះស្គី</a></li>
+                    <li><a href="Swimming.html" class="hover-underline-animation">ហែលទឹក</a></li>
                     <li><a href="boatracing.html" class="hover-underline-animation">ប្រណាំងទូក</a></li>
                     <li><a href="taekwondo.html" class="hover-underline-animation">តៃខ្វាន់ដូ</a></li>
                     <li><a href="electronicsports.html" class="active" class="hover-underline-animation">កីឡាអេឡិចត្រូនិក</a></li>
