--- a/lbokator.html
+++ b/lbokator.html
@@ -58,7 +58,7 @@
         <div class="top2">
             <p><a href="index.html">កំពុងពេញនិយម</a></p>
             <h1>ព័ត៌មានល្បុក្កតោ</h1>
-            <p><a href="#">ចុងក្រោយបំផុត</a></p>
+            <p><a href="lastnews.html">ចុងក្រោយបំផុត</a></p>
         </div>
 
         <hr noshade="noshade" color="black" size="1" align="center" style="margin-top: 50px;">
