--- a/main.html
+++ b/main.html
@@ -41,7 +41,7 @@
                     <li><a href="football.html" class="hover-underline-animation">បាល់ទាត់</a></li>
                     <li><a href="volleyball.html" class="hover-underline-animation">បាល់ទះ</a></li>
                     <li><a href="basketball.html" class="hover-underline-animation">បាល់បោះ</a></li>
-                    <li><a href="freeboxing.html" class="active" class="hover-underline-animation">ប្រដាល់</a></li>
+                    <li><a href="freeboxing.html" class="hover-underline-animation">ប្រដាល់</a></li>
                     <li><a href="lbokator.html" class="hover-underline-animation">ល្បុក្កតោ</a></li>
                     <li><a href="Swimming.html" class="hover-underline-animation">ហែលទឹក</a></li>
                     <li><a href="boatracing.html" class="hover-underline-animation">ប្រណាំងទូក</a></li>
